--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en"></html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="React, Vite, HTML, CSS, JavaScript, useEffect, useReducer, Context">
+    <meta name="description" content="FrontEnd III Entrega final, Noviembre 2023.">
+    <meta name="author" content="Christian E. Fernández">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Front End III Noviembre 2023</title>
   </head>
